diviser les donnes

--- a/train_classifier.ipynb
+++ b/train_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a9c5368c-acf7-4840-b775-9bac0e5eedb0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0ee20552-3299-49ff-9455-2b8a5f08a01c",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9a690212-55c6-4b46-9e5d-3e0eb6e7c59d",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6b57804b-e6cf-48cf-adc3-df1029d20a09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions - Entraînement : (7000, 20), Test : (2001, 20), Validation : (999, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Division initiale : 70% entraînement et 30% temporaire (test + validation)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Division secondaire : 20% test et 10% validation\n",
+    "X_test, X_val, y_test, y_val = train_test_split(X_temp, y_temp, test_size=0.333, random_state=42)\n",
+    "\n",
+    "print(f\"Dimensions - Entraînement : {X_train.shape}, Test : {X_test.shape}, Validation : {X_val.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef6c059b-c249-4b37-92f7-30169f90cf50",
    "metadata": {},
    "outputs": [],
    "source": []
