--- a/train_classifier.ipynb
+++ b/train_classifier.ipynb
@@ -104,8 +104,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ef6c059b-c249-4b37-92f7-30169f90cf50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Précision sur les données de test : 0.9635182408795602\n",
+      "\n",
+      "Rapport de classification :\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99       650\n",
+      "           1       0.94      0.96      0.95       670\n",
+      "           2       0.97      0.94      0.95       681\n",
+      "\n",
+      "    accuracy                           0.96      2001\n",
+      "   macro avg       0.96      0.96      0.96      2001\n",
+      "weighted avg       0.96      0.96      0.96      2001\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Création et entraînement du modèle\n",
+    "model = KNeighborsClassifier(n_neighbors=5)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Prédiction sur les données de test\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Évaluation des performances\n",
+    "print(\"Précision sur les données de test :\", accuracy_score(y_test, y_pred))\n",
+    "print(\"\\nRapport de classification :\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a957df12-dbe1-4cee-ba50-827b39146d58",
    "metadata": {},
    "outputs": [],
    "source": []
